Fixed overflow issue and adjusted text padding on mobile

--- a/phone-style.css
+++ b/phone-style.css
@@ -17,6 +17,11 @@ h1 {
 	margin:0px;
 }
 
+.text-content .description {
+	padding-left:5px;
+	padding-right:20px;
+}
+
 .text-content footer {
 	position:relative;
 }
